# constructor-macro

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: construct.rs  lib.rs
tests/: construct.rs  construct_variadic.rs  constructor_macro.rs  default_value.rs  derive.rs  module.rs
