[package]
name = "constructor-macro"
description = "Derive constructor macros for structs"
version = "0.2.0"
authors = ["Kai <thiskaiguy@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/thisKai/constructor-macro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
proc-macro-crate = "0.1"

[dependencies.syn]
version = "0.15.29"
features = [
    "full",
]
