[package]
name = "constructor-macro"
description = "Derive constructor macros for structs"
version = "0.4.1"
authors = ["Kai <thiskaiguy@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thisKai/constructor-macro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
